<resources>
    <string name="app_name">GroceryWalla</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="new_product">New Product</string>


    <string name="get_start">Get Start</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email">Email ID</string>
    <string name="name">Full Name</string>
    <string name="refer">Referral Code (Optional)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="signup_page">Don\'t Have An Account? Sign Up</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin_page">Already Have An Account? Sign in</string>
    <string name="loading">Loading...</string>
    <string name="your_current_location">your current location.</string>
    <string name="home">Home</string>
    <string name="wishlist">My WishList</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="userName">User Name</string>
    <string name="user_email">useremail@gmail.com</string>
    <string name="check_your_order_status">Check your order status</string>
    <string name="my_wallet">My Wallet</string>
    <string name="check_your_wallet_status">Check your wallet status</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="address">Address</string>
    <string name="coupons">Coupons</string>
    <string name="check_your_coupons_status">Check your coupons status</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_amp_codition"><![CDATA[Terms & Codition]]></string>
    <string name="your_cart_list_is">Your cart list is</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="you_can_change_your_profile_is_here">You can change your profile is here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="flat_50_off_on_your_first_order">flat 50% off on your first order</string>
    <string name="use_coupon_code_on_payment_page">use coupon code on payment page</string>
    <string name="blankdash">----------</string>
    <string name="use_code">Use Code</string>
    <string name="get_fast">get Fast</string>
    <string name="bill_details">Bill Details</string>
    <string name="mrp">MRP</string>
    <string name="rs">Rs :-</string>
    <string name="_5000">5000/-</string>
    <string name="product_discount">Product Discount</string>
    <string name="remove_item">-</string>
    <string name="_126">126/-</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="free">Free</string>
    <string name="bill_total">Bill Total</string>
    <string name="_4876">4876/-</string>
    <string name="promo_code_can_be_apply_on_payment_screen">Promo code can be apply on payment screen</string>
    <string name="want_to_add_a_tip">Want to add a tip ?</string>
    <string name="all_tips_are_directly_transferred_in_the_deliver_partner">All tips are directly transferred in the deliver partner.</string>
    <string name="_25">+25</string>
    <string name="_100">+100</string>
    <string name="_250">+250</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="you_might_like_to_buy">You might like to buy</string>
    <string name="_1000">+1000</string>
    <string name="_5kg">5*1000g</string>
    <string name="see_all">see all</string>
    <string name="todo">TODO</string>
    <string name="search">Search Here</string>
    <string name="categories">Categories</string>
    <string name="latest_offer">Latest Offer</string>
    <string name="brand_you_like_most">Brand You Like Most</string>
    <string name="product_name"><![CDATA[Grocery & Staples]]></string>
    <string name="price_tag">Rs :-</string>
    <string name="product_price">5000</string>
    <string name="product_cut_price">Rs.10,000/-</string>
    <string name="incl_of_delivery_charges_amp_taxes"><![CDATA[Incl. of delivery charges & taxes]]></string>
    <string name="_1">1</string>
    <string name="product_status">Cancelled on Feb 06,2020</string>
    <string name="you_will_be_save_rs_1230_0_in_total">You will be save Rs.126.0 in total</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="_continue">Continue</string>
    <string name="_10_offer">10% offer</string>
    <string name="inclusive_all_taxes">(Inclusive all taxes. )</string>
    <string name="unit">Unit</string>
    <string name="rating_amp_review_and_get_people_reaction_to_click_here">Rating and Ask question </string>
    <string name="frequently_brought_together">Frequently Brought Together.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="_0_0">0.0</string>
    <string name="_5">/5</string>
    <string name="feedback">FeedBack</string>
    <string name="question">Ask Question</string>
    <string name="enter_here">Enter your Question</string>
    <string name="user_feedback">This Product is excellent by quality</string>
    <string name="user">Anurag Srivastav</string>
    <string name="user_tag">by</string>
    <string name="date">march 11,2020</string>
    <string name="seller_tag">Verified Buyer</string>
    <string name="rate_us">Rate us</string>
    <string name="setting">Setting</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="b1_1408">B1–1408</string>
    <string name="ekmurti_chawk">Ekmurti chawk</string>
    <string name="greater_noida_west_uttar_pradesh">Greater Noida West, Uttar Pradesh</string>
    <string name="house_no_flat_no_tower">House No/ Flat No/ Tower</string>
    <string name="street_society_landmark">Street/Society/Landmark</string>
    <string name="house_office_others">House/Office/Others</string>
    <string name="save_address">Save Address</string>
    <string name="search_location">Search Location</string>
    <string name="your_current_location_is">Your Current Location is</string>
    <string name="email_mobile_no">Email/Mobile No</string>
    <string name="full_name">Full Name</string>
    <string name="city_place">City/Place</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="send">SEND</string>
    <string name="placing_an_order">Placing an order</string>
    <string name="general_queries">General queries</string>
    <string name="cancellation_and_returns">Cancellation and Returns</string>
    <string name="delivery_related_queries">Delivery related queries</string>
    <string name="payment_related_queries">Payment Related Queries</string>
    <string name="share_app_to_friends">Share App to Friends</string>
    <string name="check_your_address_status">Check your address status</string>
    <string name="wish_list_is_here">Wish List is here</string>
    <string name="setting_page">Setting Page</string>
    <string name="about_us">About Us</string>
    <string name="info_for_this_application">Info for this application</string>
    <string name="customer_support">Customer Support</string>
    <string name="customer_support_page">Customer Support Page</string>
    <string name="price_details">Price Details</string>
    <string name="selling_price">Selling Price</string>
    <string name="extra_discount">Extra Discount</string>
    <string name="special_price">Special Price</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="enter_vpa_ex_5894xxxxxx_oksbi">Enter VPA. Ex: 5894xxxxxx@oksbi</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="more_payment_option">More Payment Option</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="google_pay">Google Pay</string>
    <string name="multiple_payment_option">Multiple Payment Option</string>
    <string name="change_address">Change Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="pincode">PinCode :-</string>
    <string name="phone_no">1234567890</string>
    <string name="phone_number">Phone number:</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="after_tag">/-</string>
    <string name="total_amount">Total Amount</string>
    <string name="most_popular">Most Popular</string>
    <string name="change_photo">Change Photo</string>
    <string name="birth_date">Birth Date:</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="saved_profile">Saved Profile</string>
    <string name="forget_pass_description">We just need your registered Email Id to sent you password reset instruction.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="get_otp">Get Otp</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the otp sent to you</string>
    <string name="_91_123456789">+91 123456789</string>
    <string name="didn_t_receive_otp">Didn\'t receive otp.</string>
    <string name="resend_otp_again">Resend Otp Again</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_banner">Banner/Slider</string>
    <string name="menu_brands">Brands Uploads</string>
    <string name="menu_category">Category Uploads</string>
    <string name="menu_cat">Home Category &amp; Slider</string>
    <string name="menu_products">Home Products</string>
    <string name="menu_fruits">Fruits &amp; Vegetables</string>
    <string name="menu_snacks">Snacks</string>
    <string name="menu_bakery">Bakery &amp; Biscuits</string>
    <string name="menu_tea_coffee">Tea, coffee &amp; Health drinks</string>
    <string name="menu_cold_drinks">Cold drinks &amp; Juices</string>
    <string name="menu_grocery_items">Grocery Items</string>
    <string name="menu_masala">Masala &amp; mores</string>
    <string name="menu_baby_care">Baby Care</string>
    <string name="menu_personal_care">Personal Care</string>
    <string name="menu_cleaning">Cleaning Essentials</string>
    <string name="menu_pet_care">Pet Care</string>
    <string name="menu_lat_offer">Latest Offer</string>


</resources>