<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_adHome"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cat" >
            <menu>
                <item
                    android:id="@+id/nav_category"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_category" />

                <item
                    android:id="@+id/nav_banner"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_banner" />

                <item
                    android:id="@+id/nav_latest"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_lat_offer" />
            </menu>
        </item>

        <item
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_products" >
            <menu>
                <item
                    android:id="@+id/nav_fruits"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_fruits" />

                <item
                    android:id="@+id/nav_snacks"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_snacks" />

                <item
                    android:id="@+id/nav_bakery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bakery" />

                <item
                    android:id="@+id/nav_tea_coffee"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_tea_coffee" />

                <item
                    android:id="@+id/nav_cold_drinks"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_cold_drinks" />

                <item
                    android:id="@+id/nav_grocery_items"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_grocery_items" />

                <item
                    android:id="@+id/nav_masala"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_masala" />

                <item
                    android:id="@+id/nav_baby_care"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_baby_care" />

                <item
                    android:id="@+id/nav_personal_care"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_personal_care" />

                <item
                    android:id="@+id/nav_cleaning"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_cleaning" />

                <item
                    android:id="@+id/nav_pet_care"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_pet_care" />
            </menu>
        </item>

    </group>
</menu>