<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/purple_500"
        android:orientation="vertical"
        tools:context=".Activities.ForgetPass">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/lock"
            android:layout_marginTop="20dp"
            android:padding="35dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass_description"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/regist_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/currPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10dp"
            android:hint="@string/current_password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:autofillHints="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/reset_password"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/resetpass"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

    </LinearLayout>