<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/simple_button_border"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/address_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/address_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/address_houseNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b1_1408"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/addres_street_society"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ekmurti_chawk"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greater_noida_west_uttar_pradesh"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.skydoves.elasticviews.ElasticImageView
            android:id="@+id/address_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_more_horiz_24"/>


    </LinearLayout>

</LinearLayout>