<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:background="@drawable/delivery_bg"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/shipping_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/user"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shipping_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/shipping_address"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/shipping_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pincode"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/shipping_pin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pin_code"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        </LinearLayout>

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/change_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_address"
            android:textSize="15sp"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="5dp"/>

    </LinearLayout>

</RelativeLayout>